# embedded-pg

./: README.md  pyproject.toml
src/esp/: cli.py
src/esp/data/: base-compose.yml
tests/: test_cli.py
